--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <header>
         <h1>Diamond Jubilee <br>Kalpana and Anand</h1>
-        <p class="header-description">1965-2025
+        <p class="header-description">1965-2025... And counting
          <br>
                  <div class="video-item">
                 <img src="Wedding.gif" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
@@ -214,18 +214,20 @@
     <div id="calendar-popup" class="calendar-popup">
         <h3>Select a Date</h3>
         <ul class="date-list">
-            <li onclick="submitDate('Sun, 11 May 2025 - Gurgaon')">Sun, 11 May 2025 - Gurgaon</li>
+            <li onclick="submitDate('Sun, 18 May 2025 - Gurgaon')">Sun, 18 May 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 25 May 2025 - Gurgaon')">Sun, 25 May 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 8 Jun 2025 - Gurgaon')">Sun, 8 Jun 2025 - Gurgaon</li>
-            <li onclick="submitDate('Sun, 22 Jun 2025 - Gurgaon')">Sun, 22 Jun 2025 - Gurgaon</li>
+            <li onclick="submitDate('Sun, 15 Jun 2025 - Gurgaon')">Sun, 15 Jun 2025 - Gurgaon</
+            <li onclick="submitDate('Sun, 29 Jun 2025 - Gurgaon')">Sun, 29 Jun 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 6 Jul 2025 - Gurgaon')">Sun, 6 Jul 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 20 Jul 2025 - Gurgaon')">Sun, 20 Jul 2025 - Gurgaon</li>
-            <li onclick="submitDate('Sun, 3 Aug 2025 - Gurgaon')">Sun, 3 Aug 2025 - Gurgaon</li>
+            <li onclick="submitDate('Sun, 27 Jul 2025 - Gurgaon')">Sun, 27 Jul 2025 - Gurgaon</li>
+            <li onclick="submitDate('Sun, 10 Aug 2025 - Gurgaon')">Sun, 10 Aug 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 17 Aug 2025 - Gurgaon')">Sun, 17 Aug 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 31 Aug 2025 - Gurgaon')">Sun, 31 Aug 2025 - Gurgaon</li>
+            <li onclick="submitDate('Sun, 7 Sep 2025 - Gurgaon')">Sun, 7 Sep 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 14 Sep 2025 - Gurgaon')">Sun, 14 Sep 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 28 Sep 2025 - Gurgaon')">Sun, 28 Sep 2025 - Gurgaon</li>
-            <li onclick="submitDate('Sun, 9 Nov 2025 - London')">Sun, 9 Nov 2025 - London</li>
             <li onclick="submitDate('Sun, 23 Nov 2025 - London')">Sun, 23 Nov 2025 - London</li>
             <li onclick="submitDate('Sun, 7 Dec 2025 - London')">Sun, 7 Dec 2025 - London</li>
             <li onclick="submitDate('Sun, 21 Dec 2025 - London')">Sun, 21 Dec 2025 - London</li>
