--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                We would love for you to select a date below and bring a letter or share a cherished memory—moments on the tracks of time as six decades have flown by.
             </p>
           
-            <button onclick="openCalendar()">View availabilty <br>and select <br> Your Date </button>
+            <button onclick="openCalendar()">View availabilty <br>to select <br> Your Date </button>
         </div>
     </div>
 
