--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
             <li onclick="submitDate('Sun, 18 May 2025 - Gurgaon')">Sun, 18 May 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 25 May 2025 - Gurgaon')">Sun, 25 May 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 8 Jun 2025 - Gurgaon')">Sun, 8 Jun 2025 - Gurgaon</li>
-            <li onclick="submitDate('Sun, 15 Jun 2025 - Gurgaon')">Sun, 15 Jun 2025 - Gurgaon</li>
+            Sun, 15 Jun 2025 - Gurgaon. Booked
             <li onclick="submitDate('Sun, 29 Jun 2025 - Gurgaon')">Sun, 29 Jun 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 6 Jul 2025 - Gurgaon')">Sun, 6 Jul 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 20 Jul 2025 - Gurgaon')">Sun, 20 Jul 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 27 Jul 2025 - Gurgaon')">Sun, 27 Jul 2025 - Gurgaon</li>
-            <li onclick="submitDate('Sun, 10 Aug 2025 - Gurgaon')">Sun, 10 Aug 2025 - Gurgaon</li>
+            Sun, 10 Aug 2025 - Gurgaon. Booked
             <li onclick="submitDate('Sun, 17 Aug 2025 - Gurgaon')">Sun, 17 Aug 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 31 Aug 2025 - Gurgaon')">Sun, 31 Aug 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 7 Sep 2025 - Gurgaon')">Sun, 7 Sep 2025 - Gurgaon</li>
