--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div id="calendar-popup" class="calendar-popup">
         <h3>Select a Date</h3>
         <ul class="date-list">
-            <li onclick="submitDate('Sun, 18 May 2025 - Gurgaon')">Sun, 18 May 2025 - Gurgaon</li>
+            Sun, 18 May 2025 - Gurgaon. Booked
             <li onclick="submitDate('Sun, 25 May 2025 - Gurgaon')">Sun, 25 May 2025 - Gurgaon</li>
             <li onclick="submitDate('Sun, 8 Jun 2025 - Gurgaon')">Sun, 8 Jun 2025 - Gurgaon</li>
             Sun, 15 Jun 2025 - Gurgaon. Booked
