--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h3>Select a Date</h3>
         <ul class="date-list">
             Sun, 18 May 2025 - Gurgaon. Booked
-            <li onclick="submitDate('Sun, 25 May 2025 - Gurgaon')">Sun, 25 May 2025 - Gurgaon</li>
+            Sun, 25 May 2025 - Gurgaon
             <li onclick="submitDate('Sun, 8 Jun 2025 - Gurgaon')">Sun, 8 Jun 2025 - Gurgaon</li>
             Sun, 15 Jun 2025 - Gurgaon. Booked
             <li onclick="submitDate('Sun, 29 Jun 2025 - Gurgaon')">Sun, 29 Jun 2025 - Gurgaon</li>
