--- a/Gurukul/Gurukul.html
+++ b/Gurukul/Gurukul.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Diamond Jubilee</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+      background-color: #900C3F;
+      margin: 0;
+      padding: 0;
+      font-size: 20px;
+    }
 
+    header {
+      background-color: #900C3F;
+      color: #929292;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-bottom: 10px;
+    }
+
+    .header-description {
+      color: #929292;
+    }
+
+    .mosaic-container {
+      column-count: 4;
+      column-gap: 10px;
+      padding: 20px;
+    }
+
+    .mosaic-container img {
+      width: 100%;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      display: block;
+      transition: transform 0.2s ease;
+    }
+
+    .mosaic-container img:hover {
+      transform: scale(1.03);
+    }
+
+    @media (max-width: 768px) {
+      .mosaic-container {
+        column-count: 2;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .mosaic-container {
+        column-count: 1;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Diamond Jubilee <br>Kalpana and Anand</h1>
+    <p class="header-description">1965–2025... And counting</p>
+  </header>
+
+  <div class="mosaic-container">
+    <!-- Images -->
+    <img src="IMG_5390.jpeg" alt="">
+    <img src="IMG_5391.jpeg" alt="">
+    <img src="IMG_5392.jpeg" alt="">
+    <img src="IMG_5393.jpeg" alt="">
+    <img src="IMG_5394.jpeg" alt="">
+    <img src="IMG_5395.jpeg" alt="">
+    <img src="IMG_5396.jpeg" alt="">
+    <img src="IMG_5397.jpeg" alt="">
+    <img src="IMG_5398.jpeg" alt="">
+    <img src="IMG_5399.jpeg" alt="">
+    <img src="IMG_5400.jpeg" alt="">
+    <img src="IMG_5401.jpeg" alt="">
+    <img src="IMG_5402.jpeg" alt="">
+    <img src="IMG_5403.jpeg" alt="">
+    <img src="IMG_5404.jpeg" alt="">
+    <img src="IMG_5405.jpeg" alt="">
+    <img src="IMG_5406.jpeg" alt="">
+    <img src="IMG_5407.jpeg" alt="">
+    <img src="IMG_5408.jpeg" alt="">
+    <img src="IMG_5409.jpeg" alt="">
+    <img src="IMG_5410.jpeg" alt="">
+    <img src="IMG_5411.jpeg" alt="">
+    <img src="IMG_5412.jpeg" alt="">
+    <img src="IMG_5413.jpeg" alt="">
+    <img src="IMG_5414.jpeg" alt="">
+    <img src="IMG_5415.jpeg" alt="">
+    <img src="IMG_5416.jpeg" alt="">
+    <img src="IMG_5417.jpeg" alt="">
+    <img src="IMG_5418.jpeg" alt="">
+    <img src="IMG_5419.jpeg" alt="">
+    <img src="IMG_5420.jpeg" alt="">
+    <img src="IMG_5421.jpeg" alt="">
+    <img src="IMG_5422.jpeg" alt="">
+    <img src="IMG_5423.jpeg" alt="">
+    <img src="IMG_5424.jpeg" alt="">
+    <img src="IMG_5425.jpeg" alt="">
+    <img src="IMG_5426.jpeg" alt="">
+    <img src="IMG_5427.jpeg" alt="">
+    <img src="IMG_5428.jpeg" alt="">
+    <img src="IMG_5429.jpeg" alt="">
+    <img src="IMG_5430.jpeg" alt="">
+    <img src="IMG_5431.jpeg" alt="">
+    <img src="IMG_5432.jpeg" alt="">
+    <img src="IMG_5433.jpeg" alt="">
+    <img src="IMG_5434.jpeg" alt="">
+    <img src="IMG_5435.jpeg" alt="">
+    <img src="IMG_5436.jpeg" alt="">
+    <img src="IMG_5437.jpeg" alt="">
+    <img src="IMG_5438.jpeg" alt="">
+    <img src="IMG_5439.jpeg" alt="">
+    <img src="IMG_5440.jpeg" alt="">
+    <img src="IMG_5441.jpeg" alt="">
+    <img src="IMG_5442.jpeg" alt="">
+    <img src="IMG_5443.jpeg" alt="">
+    <img src="IMG_5444.jpeg" alt="">
+    <img src="IMG_5445.jpeg" alt="">
+    <img src="IMG_5446.jpeg" alt="">
+    <img src="IMG_5447.jpeg" alt="">
+    <img src="IMG_5448.jpeg" alt="">
+    <img src="IMG_5449.jpeg" alt="">
+    <img src="IMG_5450.jpeg" alt="">
+    <img src="IMG_5451.jpeg" alt="">
+    <img src="IMG_5452.jpeg" alt="">
+    <img src="IMG_5453.jpeg" alt="">
+    <img src="IMG_5454.jpeg" alt="">
+    <img src="IMG_5455.jpeg" alt="">
+    <img src="IMG_5456.jpeg" alt="">
+    <img src="IMG_5457.jpeg" alt="">
+    <img src="IMG_5458.jpeg" alt="">
+    <img src="IMG_5459.jpeg" alt="">
+    <img src="IMG_5460.jpeg" alt="">
+    <img src="IMG_5461.jpeg" alt="">
+    <img src="IMG_5462.jpeg" alt="">
+    <img src="IMG_5463.jpeg" alt="">
+    <img src="IMG_5464.jpeg" alt="">
+    <img src="IMG_5465.jpeg" alt="">
+    <img src="IMG_5466.jpeg" alt="">
+    <img src="IMG_5467.jpeg" alt="">
+    <img src="IMG_5468.jpeg" alt="">
+  </div>
+
+</body>
+</html>
