--- a/Gurukul/Gurukul.html
+++ b/Gurukul/Gurukul.html
@@ -71,7 +71,7 @@
     <img src="IMG_5390.jpeg" alt="">
     <img src="IMG_5391.jpeg" alt="">
     <img src="IMG_5392.jpeg" alt="">
-    <img src="IMG_5393.jpeg" alt="">
+    <img src="IMG_5393.jpeg" alt="xx">
     <img src="IMG_5394.jpeg" alt="">
     <img src="IMG_5395.jpeg" alt="">
     <img src="IMG_5396.jpeg" alt="">
