--- a/index.html
+++ b/index.html
@@ -242,8 +242,17 @@
             <li onclick="submitDate('Sun, 26 Apr 2026 - London')">Sun, 26 Apr 2026 - London</li>
         </ul>
         <button id="calendar-button" class="select-button" onclick="closeCalendar()">Close</button>
+  
     </div>
-
+    
+<div class="video-item">
+    <img src="Gurukul.jpg" alt="Gurukul Celebration" class="poster" />
+    <p class="video-caption">
+        17th May. A special moment, sharing Jalebi, Samosa and Kulfi with 350 happy children at the Gurukul.
+        <br>
+        <a href="Gurukul/index.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from Gurukul</a>
+    </p>
+</div>
     
 
     <script>
