--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <p class="video-caption">
         17th May. A special moment for Shantanu's 30th and Kalpana and Anand's 60 th: sharing Jalebi, Samosa and Kulfi with 350 happy children at the Gurukul.
         <br>
-        <a href="Gurukul/index.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from Gurukul</a>
+        <a href="Gurukul/Gurukul.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from Gurukul</a>
     </p>
 </div>
     
