--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
         <button id="calendar-button" class="select-button" onclick="closeCalendar()">Close</button>
   
     </div>
+    <div class="video-item">
+    <img src="IMG_5202.jpeg"alt="Gurukul Celebration" class="poster" />
+    <p class="video-caption">
+        13th May 2025. A special moment for  Kalpana and Anand's 60 th:<br> The bride and groom exchange Jaimal.
+        <br>
+        <a href="Jaimal/Jaimal.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
+    </p>
+</div>
+    
     
 <div class="video-item">
     <img src="IMG_5464.jpeg"alt="Gurukul Celebration" class="poster" />
