--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <p class="video-caption">
         13th May 2025. A special moment for  Kalpana and Anand's 60 th:<br> The bride and groom exchange Jaimal.
         <br>
-        <a href="Jaimal/Jaimal.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
+        <a href="Jamal/Animal.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
     </p>
 </div>
     
