--- a/index.html
+++ b/index.html
@@ -247,12 +247,22 @@
     <div class="video-item">
     <img src="IMG_5202.jpeg"alt="Gurukul Celebration" class="poster" />
     <p class="video-caption">
-        13th May 2025. A special moment for  Kalpana and Anand's 60 th:<br> The bride and groom exchange Jaimal.
+        9th May 2025. A special moment for  Kalpana and Anand's 60 th:<br> The bride and groom exchange Jaimal.
         <br>
         <a href="Jamal/Animal.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
     </p>
 </div>
-    
+
+
+    </div>
+    <div class="video-item">
+    <img src="IMG_5328.jpeg"alt="Gurukul Celebration" class="poster" />
+    <p class="video-caption">
+        13th May 2025. Sundar Kand
+        <br>
+        <a href="Sundar/Sundar.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
+    </p>
+</div>
     
 <div class="video-item">
     <img src="IMG_5464.jpeg"alt="Gurukul Celebration" class="poster" />
