--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <p class="video-caption">
         13th May 2025. Sundar Kand
         <br>
-        <a href="Sundar/Sundar.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
+        <a href="Sundar/Sundar.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Sundar Kand"</a>
     </p>
 </div>
     
