--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
     </video>
     <p class="video-caption">
         9th May 2025. A special moment for Kalpana and Anand's 60th:<br>
-        The bride and groom exchange Jaimal.
+        The bride and groom exchange Jaimal. Click image to see more.
         <br>
-        <a href="Jamal/Animal.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from the "Wedding"</a>
+      
     </p>
 </div>
 
@@ -276,8 +276,8 @@
     <p class="video-caption">
         13th May 2025. Sundar Kand
         <br>
-       17th May. A special moment for Shantanu's 30th and Kalpana and Anand's 60 th:<br> Sharing Jalebi, Samosa and Kulfi with 350 happy children at the Gurukul.
-     <br>   <a href="Gurukul/Gurukul.html" target="_blank" style="color: #929292; text-decoration: underline;">See more from Gurukul</a>
+       17th May. A special moment for Shantanu's 30th and Kalpana and Anand's 60 th:<br> Sharing Jalebi, Samosa and Kulfi with 175 happy children at the Gurukul.
+     <br>  Click image to see more.
          </p>
 </div>
 
