--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </video>
     <p class="video-caption">
         9th May 2025. A special moment for Kalpana and Anand's 60th:<br>
-        The bride and groom exchange Jaimal. Click image to see more.
+        The bride and groom exchange Jaimal. <br>Click image to see more.
         <br>
       
     </p>
@@ -265,7 +265,7 @@
 <div class="video">
     <video
         id="Video"
-        poster="IMG_5328.jpeg"
+        poster="Sundar.jpeg"
         onclick="this.play(); this.setAttribute('controls', '');"
         playsinline
         style="cursor: pointer;"
