--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <div class="video">
     <video
         id="Video"
-        poster="lal.jpeg "
+        poster="Lals.jpeg "
         onclick="this.play(); this.setAttribute('controls', '');"
         playsinline
         style="cursor: pointer;"
